Issue #2: Added basic content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <header>
-    Forkfolio
+    <picture>
+        <img src="logo_64x64.png" alt="fork, spoon and knife logo">
+    </picture>
+    <h1>Forkfolio</h1>
 </header>
 <nav>
     <a href="index.html">ForkFolio</a>
@@ -17,20 +20,37 @@
 </nav>
 <main>
     <section>
+        <picture>
+            <img src="hero_480.jpg" alt="several meal on a buffe">
+        </picture>
+    </section>
+    <section>
         <h2>Mina recept</h2>
         <article>
+            <picture>
+                <img src="lasagne_480.jpg" alt="Lasagne on a plate">
+            </picture>
             <h3>Lasagne</h3>
         </article>
         <article>
+            <picture>
+                <img src="pizza_480.jpg" alt="Pizza">
+            </picture>
             <h3>Pizza</h3>
         </article>
     </section>
     <section>
         <h2>Artiklar</h2>
         <article>
+            <picture>
+                <img src="cakes_480.jpg" alt="Bild på en sommartårta">
+            </picture>
             <h3>Bästa sommartårtorna!</h3>
         </article>
         <article>
+            <picture>
+                <img src="vegetables_480.jpg" alt="grönsaker">
+            </picture>
             <h3>Grönsaksladda med dessa vegrecept</h3>
         </article>
     </section>
@@ -39,6 +59,9 @@
     </aside>
 </main>
 <footer>
+    <picture>
+        <img src="logo_32x32.png" alt=" fork, spoon and knife logo">
+    </picture>
     <p>ForkFolio är siten för dig som älskar mat!</p>
 </footer>
 </body>
