--- a/my_recipies.html
+++ b/my_recipies.html
@@ -9,19 +9,30 @@
 </head>
 <body>
 <header>
-    Forkfolio
+    <picture>
+        <img src="logo_64x64.png" alt="fork, spoon and knife logo">
+    </picture>
+    <h1>Forkfolio</h1>
 </header>
 <nav>
     <a href="index.html">ForkFolio</a>
     <a href="my_recipies.html">Mina recept</a>
 </nav>
 <main>
-    <p>Hej!</p>
+    <section>
+        <picture>
+            <img src="hero_480.jpg" alt="several meal on a buffe">
+        </picture>
+    </section>
+    <h2>Mina recept</h2>
     <aside>
         <p>Av: Katarina</p>
     </aside>
 </main>
 <footer>
+    <picture>
+        <img src="logo_32x32.png" alt=" fork, spoon and knife logo">
+    </picture>
     <p>ForkFolio är siten för dig som älskar mat!</p>
 </footer>
 </body>
