Issue #2: Reorganizing structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <picture>
-        <img src="logo_64x64.png" alt="fork, spoon and knife logo">
+        <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
     </picture>
     <h1>Forkfolio</h1>
 </header>
@@ -21,20 +21,20 @@
 <main>
     <section>
         <picture>
-            <img src="hero_480.jpg" alt="several meal on a buffe">
+            <img src="images/hero_480.jpg" alt="several meal on a buffe">
         </picture>
     </section>
     <section>
         <h2>Mina recept</h2>
         <article>
             <picture>
-                <img src="lasagne_480.jpg" alt="Lasagne on a plate">
+                <img src="images/lasagne_480.jpg" alt="Lasagne on a plate">
             </picture>
             <h3>Lasagne</h3>
         </article>
         <article>
             <picture>
-                <img src="pizza_480.jpg" alt="Pizza">
+                <img src="images/pizza_480.jpg" alt="Pizza">
             </picture>
             <h3>Pizza</h3>
         </article>
@@ -43,13 +43,13 @@
         <h2>Artiklar</h2>
         <article>
             <picture>
-                <img src="cakes_480.jpg" alt="Bild på en sommartårta">
+                <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
             </picture>
             <h3>Bästa sommartårtorna!</h3>
         </article>
         <article>
             <picture>
-                <img src="vegetables_480.jpg" alt="grönsaker">
+                <img src="images/vegetables_480.jpg" alt="grönsaker">
             </picture>
             <h3>Grönsaksladda med dessa vegrecept</h3>
         </article>
@@ -60,7 +60,7 @@
 </main>
 <footer>
     <picture>
-        <img src="logo_32x32.png" alt=" fork, spoon and knife logo">
+        <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
     </picture>
     <p>ForkFolio är siten för dig som älskar mat!</p>
 </footer>
