--- a/my_recipies.html
+++ b/my_recipies.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <picture>
-        <img src="logo_64x64.png" alt="fork, spoon and knife logo">
+        <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
     </picture>
     <h1>Forkfolio</h1>
 </header>
@@ -21,7 +21,7 @@
 <main>
     <section>
         <picture>
-            <img src="hero_480.jpg" alt="several meal on a buffe">
+            <img src="images/hero_480.jpg" alt="several meal on a buffe">
         </picture>
     </section>
     <h2>Mina recept</h2>
@@ -31,7 +31,7 @@
 </main>
 <footer>
     <picture>
-        <img src="logo_32x32.png" alt=" fork, spoon and knife logo">
+        <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
     </picture>
     <p>ForkFolio är siten för dig som älskar mat!</p>
 </footer>
