Issue #2: Fixing validation

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <a href="my_recipies.html">Mina recept</a>
 </nav>
 <main>
-    <section>
+    <div>
         <picture>
             <img src="images/hero_480.jpg" alt="several meal on a buffe">
         </picture>
-    </section>
+    </div>
     <section>
         <h2>Mina recept</h2>
         <article>
