--- a/my_recipies.html
+++ b/my_recipies.html
@@ -19,11 +19,11 @@
     <a href="my_recipies.html">Mina recept</a>
 </nav>
 <main>
-    <section>
+    <div>
         <picture>
             <img src="images/hero_480.jpg" alt="several meal on a buffe">
         </picture>
-    </section>
+    </div>
     <h2>Mina recept</h2>
     <aside>
         <p>Av: Katarina</p>
