Issue #4: header with logo class

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 <body>
 <header>
-    <picture>
-        <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
-    </picture>
-    <h1>Forkfolio</h1>
+    <div class="logo">
+        <picture>
+            <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+        </picture>
+        <h1 class="title">Forkfolio</h1>
+    </div>
+
 </header>
 <nav>
     <div class="topBar" id="topBar">
