Issue #4:changed direction on the menu

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </header>
 <nav>
     <div class="topBar" id="topBar">
-        <a href="index.html">Hem</a>
-        <a href="my_recipies.html">Mina recept</a>
         <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
             <i class="fa fa-bars"></i>
         </a>
+        <a href="my_recipies.html">Mina recept</a>
+        <a href="index.html" class>Hem</a>
     </div>
 </nav>
 <main>
