Issue #5: added a footer

--- a/index.html
+++ b/index.html
@@ -66,11 +66,17 @@
         <p>Av: Katarina</p>
     </aside>
 </main>
-<footer>
-    <picture>
-        <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
-    </picture>
-    <p>ForkFolio är siten för dig som älskar mat!</p>
+<footer class="footer">
+    <div class="footerLogo">
+        <picture>
+            <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+        </picture>
+        <p>ForkFolio är siten för dig som älskar mat!</p>
+    </div>
+    <div class="footerLinks">
+        <a href="index.html" class>Hem</a>
+        <a href="my_recipies.html">Mina recept</a>
+    </div>
 </footer>
 <script>
     function toggleNavState() {
