Adding a container and some basic styles like padding

--- a/index.html
+++ b/index.html
@@ -26,46 +26,51 @@
         <a href="index.html" class>Hem</a>
     </div>
 </nav>
-<main>
-    <div>
-        <picture>
-            <img src="images/hero_480.jpg" alt="several meals on a buffe">
-        </picture>
-    </div>
-    <section>
-        <h2>Mina recept</h2>
-        <article>
-            <picture>
-                <img src="images/lasagne_480.jpg" alt="Lasagne on a plate">
-            </picture>
-            <h3>Lasagne</h3>
-        </article>
-        <article>
-            <picture>
-                <img src="images/pizza_480.jpg" alt="Pizza">
-            </picture>
-            <h3>Pizza</h3>
-        </article>
-    </section>
-    <section>
-        <h2>Artiklar</h2>
-        <article>
-            <picture>
-                <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
-            </picture>
-            <h3>Bästa sommartårtorna!</h3>
-        </article>
-        <article>
-            <picture>
-                <img src="images/vegetables_480.jpg" alt="grönsaker">
-            </picture>
-            <h3>Grönsaksladda med dessa vegrecept</h3>
-        </article>
-    </section>
-    <aside>
-        <p>Av: Katarina</p>
-    </aside>
-</main>
+<div class="hero">
+    <picture>
+        <img src="images/hero_480.jpg" alt="several meals on a buffe">
+    </picture>
+</div>
+<div class="container">
+    <main>
+        <section>
+            <h2 class="sectionTitle">Mina recept</h2>
+            <article>
+                <picture>
+                    <img src="images/lasagne_480.jpg" alt="Lasagne on a plate">
+                </picture>
+                <h3>Lasagne</h3>
+            </article>
+            <article>
+                <picture>
+                    <img src="images/pizza_480.jpg" alt="Pizza">
+                </picture>
+                <h3>Pizza</h3>
+            </article>
+        </section>
+        <section>
+            <h2 class="sectionTitle">Artiklar</h2>
+            <article>
+                <picture>
+                    <!-- Example for the images: <source media="(min-width:1920px)" srcset="images/cakes_1920.jpg">
+                    <source media="(min-width:960px)" srcset="images/cakes_960.jpg">-->
+                    <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
+                </picture>
+                <h3>Bästa sommartårtorna!</h3>
+            </article>
+            <article>
+                <picture>
+                    <img src="images/vegetables_480.jpg" alt="grönsaker">
+                </picture>
+                <h3>Grönsaksladda med dessa vegrecept</h3>
+            </article>
+        </section>
+        <aside>
+            <p>Av: Katarina</p>
+        </aside>
+    </main>
+</div>
+
 <footer class="footer">
     <div class="footerLogo">
         <picture>
