--- a/my_recipies.html
+++ b/my_recipies.html
@@ -26,24 +26,31 @@
         <a href="index.html" class>Hem</a>
     </div>
 </nav>
-<main>
-    <div>
-        <picture>
-            <img src="images/hero_480.jpg" alt="several meal on a buffe">
-        </picture>
-    </div>
-    <h2>Mina recept</h2>
-    <aside>
-        <p>Av: Katarina</p>
-    </aside>
-</main>
-<footer>
+<div class="hero">
     <picture>
-        <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+        <img src="images/hero_480.jpg" alt="several meals on a buffe">
     </picture>
-    <p>ForkFolio är siten för dig som älskar mat!</p>
+</div>
+<div class="container">
+    <main>
+        <h2>Mina recept</h2>
+        <aside>
+            <p>Av: Katarina</p>
+        </aside>
+    </main>
+</div>
+<footer class="footer">
+    <div class="footerLogo">
+        <picture>
+            <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+        </picture>
+        <p>ForkFolio är siten för dig som älskar mat!</p>
+    </div>
+    <div class="footerLinks">
+        <a href="index.html" class>Hem</a>
+        <a href="my_recipies.html">Mina recept</a>
+    </div>
 </footer>
-<script>
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
