Issue #8: making card clickable and new page for an article

--- a/index.html
+++ b/index.html
@@ -83,26 +83,31 @@
         <section>
             <h2 class="sectionTitle">Artiklar</h2>
             <div class="cardContainer">
-                <article class="articleCard">
-                    <picture>
-                        <source media="(min-width: 600px)" srcset="images/cakes_270.jpg">
-                        <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
-                    </picture>
-                    <div class="articleContent">
-                        <h3>Bästa sommartårtorna!</h3>
-                        <p>Lorem ipsum dolor sit amet </p>
-                    </div>
-                </article>
-                <article class="articleCard">
-                    <picture>
-                        <source media="(min-width: 600px)" srcset="images/vegetables_270.jpg">
-                        <img src="images/vegetables_480.jpg" alt="grönsaker">
-                    </picture>
-                    <div class="articleContent">
-                        <h3>Grönsaksladda med dessa vegrecept</h3>
-                        <p>Lorem ipsum dolor sit amet </p>
-                    </div>
-                </article>
+                <a href="summer-cakes.html" class="articleCard" >
+                    <article >
+                        <picture>
+                            <source media="(min-width: 600px)" srcset="images/cakes_270.jpg">
+                            <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
+                        </picture>
+                        <div class="articleContent">
+                            <h3>Bästa sommartårtorna!</h3>
+                            <p>Lorem ipsum dolor sit amet </p>
+                        </div>
+                    </article>
+                </a>
+                <a href="vegetables.html" class="articleCard" >
+                    <article>
+                        <picture>
+                            <source media="(min-width: 600px)" srcset="images/vegetables_270.jpg">
+                            <img src="images/vegetables_480.jpg" alt="grönsaker">
+                        </picture>
+                        <div class="articleContent">
+                            <h3>Grönsaksboosta med säsongens grönsaker</h3>
+                            <p>Lorem ipsum dolor sit amet </p>
+                        </div>
+                    </article>
+                </a>
+
             </div>
 
         </section>
