#27: Page for adding a recipe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
             <i class="fa fa-bars"></i>
         </a>
-        <a href="my_recipies.html">Mina recept</a>
+        <a href="add_recipe.html">Lägg till recept</a>
         <a href="index.html" class>Hem</a>
     </div>
 </nav>
@@ -37,7 +37,7 @@
     <main>
         <section>
             <h2 class="sectionTitle">Mina recept</h2>
-            <div class="cardContainer">
+            <div class="sectionContainer">
                 <a href="recipe.html?recipe=sallad" class="recipeCard">
                     <article>
                         <picture>
@@ -54,7 +54,6 @@
                         </div>
                     </article>
                 </a>
-
                 <a href="recipe.html?recipe=lasagne" class="recipeCard">
                     <article>
                         <picture>
@@ -85,12 +84,14 @@
                         </div>
                     </article>
                 </a>
-
             </div>
         </section>
+        <div class="sectionContainer">
+            <a href="add_recipe.html" class="addButton" style="vertical-align:middle"><span>Lägg till recept </span></a>
+        </div>
         <section>
             <h2 class="sectionTitle">Artiklar</h2>
-            <div class="cardContainer">
+            <div class="sectionContainer">
                 <a href="summer-cakes.html" class="articleCard" >
                     <article >
                         <picture>
@@ -131,7 +132,7 @@
     </div>
     <div class="footerLinks">
         <a href="index.html" class>Hem</a>
-        <a href="my_recipies.html">Mina recept</a>
+        <a href="add_recipe.html">Lägg till recept</a>
     </div>
 </footer>
 <script>
