--- a/summer-cakes.html
+++ b/summer-cakes.html
@@ -22,7 +22,7 @@
         <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
             <i class="fa fa-bars"></i>
         </a>
-        <a href="my_recipies.html">Mina recept</a>
+        <a href="add_recipe.html">Lägg till recept</a>
         <a href="index.html" class>Hem</a>
     </div>
 </nav>
@@ -84,7 +84,7 @@
     </div>
     <div class="footerLinks">
         <a href="index.html" class>Hem</a>
-        <a href="my_recipies.html">Mina recept</a>
+        <a href="add_recipe.html">Lägg till recept</a>
     </div>
 </footer>
 <script>
