--- a/add_recipe.html
+++ b/add_recipe.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My recipies</title>
+    <title>ForkFolio</title>
     <meta name="description" content="Prototyp av receptsida">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
+<header class="header">
     <div class="logo">
         <picture>
             <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
@@ -26,19 +26,36 @@
         <a href="index.html" class>Hem</a>
     </div>
 </nav>
-<div class="hero">
-    <picture>
-        <img src="images/hero_480.jpg" alt="several meals on a buffe">
-    </picture>
-</div>
-<div class="container">
     <main>
-        <h2>Mina recept</h2>
-        <aside>
-            <p>Av: Katarina</p>
-        </aside>
+        <section class="content">
+            <h2>Vilket recept vill du lägga till?</h2>
+            <div class="formContainer">
+                <form>
+                    <div class="formGroup">
+                        <label for="title">Rubrik på ditt recept</label>
+                        <input type="text" id="title" name="title">
+                    </div>
+                    <div class="formGroup">
+                        <label for="ingredients">Ingredienser</label>
+                        <textarea id="ingredients" name="ingredients" style="height:100px"></textarea>
+                    </div>
+                    <div class="formGroup">
+                        <label for="description">Receptbeskrivning</label>
+                        <textarea id="description" name="description" style="height:200px"></textarea>
+                    </div>
+                    <div class="formGroup">
+                        <button type="button" class="button" onclick="showMessage()">Spara recept</button>
+                    </div>
+                </form>
+                <div id="message" class="alert success">
+                    <span class="message">Ditt recept har sparats!</span>
+                </div>
+            </div>
+
+        </section>
+
     </main>
-</div>
+
 <footer class="footer">
     <div class="footerLogo">
         <picture>
@@ -51,6 +68,7 @@
         <a href="add_recipe.html">Lägg till recept</a>
     </div>
 </footer>
+<script>
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
@@ -59,6 +77,10 @@
             topBar.className = "topBar";
         }
     }
+    function showMessage() {
+        document.getElementById('message').style.display = 'block';
+    }
 </script>
+
 </body>
 </html>
