#21: Larger icons on the first page

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <div class="cardFooter">
                             <p>Lorem ipsum dolor sit amet </p>
                             <div class="iconContainer">
-                                <i class="fa fa-leaf greenChoice" aria-hidden="true"></i>
-                                <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o" aria-hidden="true"></i>
+                                <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i>
+                                <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                             </div>
                         </div>
                     </article>
@@ -65,7 +65,7 @@
                         <div class="cardFooter">
                             <p>Lorem ipsum dolor sit amet </p>
                             <div class="iconContainer">
-                                <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o" aria-hidden="true"></i>
+                                <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                             </div>
                         </div>
                     </article>
@@ -80,7 +80,7 @@
                         <div class="cardFooter">
                             <p>Lorem ipsum dolor sit amet </p>
                             <div class="iconContainer">
-                                <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o" aria-hidden="true"></i>
+                                <i onclick="toggleFavourite(event, this)" class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                             </div>
                         </div>
                     </article>
